--- a/config.json
+++ b/config.json
@@ -85,5 +85,22 @@
     "trace_rawTransaction",
     "trace_replayBlockTransactions",
     "trace_replayTransaction"
-  ]
+  ],
+  "testing": {
+    "testAddress": "0x0000000000000000000000000000000000000000",
+    "historicalBlockHex": "0xa1e8400",
+    "historicalBlockNumber": 169464832,
+    "veryOldBlockHex": "0x100000",
+    "veryOldBlockNumber": 1048576,
+    "timeout": 30000,
+    "maxDurationMs": 30000,
+    "minDurationMs": 0
+  },
+  "logging": {
+    "level": "info",
+    "enableColors": true,
+    "logRequests": true,
+    "logUpstreamHealth": true,
+    "logRoutingDecisions": true
+  }
 }
