--- a/config.sample.json
+++ b/config.sample.json
@@ -49,13 +49,15 @@
           "rpcUrl": "https://rpc-evm.example.com",
           "statusUrl": "https://rpc-cosmos.example.com/status",
           "type": "full",
-          "priority": 1
+          "priority": 1,
+          "ignoredMethods": ["debug_*", "trace_*"]
         },
         {
           "id": "cheap-node-2",
           "rpcUrl": "https://evm-rpc.example2.com",
           "type": "full",
-          "priority": 2
+          "priority": 2,
+          "ignoredMethods": ["eth_getLogs", "debug_traceTransaction"]
         },
         {
           "id": "backup-archive-node",
